<!--
  ~ Copyright (c) 2019 IdleOffice Inc.
  ~
  ~ strings.xml is part of MarcTrainTracker.
  ~
  ~ MarcTrainTracker is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ MarcTrainTracker is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with this software.  If not, see <http://www.gnu.org/licenses/>.
  -->

<resources>
    <string name="app_name">MARC Commuter</string>
    <string name="title_status">Status</string>
    <string name="title_alerts">Alerts</string>
    <string name="title_schedule">Schedule</string>
    <string name="placeholder_station" translatable="false">placeholder: station</string>
    <string name="placeholder_time" translatable="false">placeholder: time</string>
    <string name="placeholder_status" translatable="false">placeholder: status</string>
    <string name="placeholder_delay" translatable="false">placeholder: delay</string>
    <string name="next_station">Next Station:</string>
    <string name="est_departure">Est. Departure:</string>
    <string name="status">Status:</string>
    <string name="delay">Delay:</string>
    <string name="placeholder_train_num">609</string>
    <string name="train_number" translatable="false">Train Number</string>
    <string name="looking_for_in_service_trains">Looking for in service trains.</string>
    <string name="no_active_trains">No active trains found. We\'ll keep looking.</string>
    <string name="no_alerts_reported_looking">No alerts reported at this time, but we\'ll keep looking.</string>
    <string name="looking_for_alerts">Looking for active alerts</string>
    <string translatable="false" name="penn">Penn</string>
    <string translatable="false" name="camden">Camden</string>
    <string translatable="false" name="brunswick">Brunswick</string>
    <string name="alerts">Alerts</string>
    <string name="pdf_reader_unavailable">PDF READER UNAVAILABLE</string>

    <!--Basic alert status-->
    <string name="date_label">Date:</string>
    <string name="description_label">Description:</string>

    <!--Alert Status Details-->
    <string name="effect_label">Effect:</string>
    <string name="cause_label">Cause:</string>
    <string name="end_date_label">End Date:</string>
    <string name="start_date_label">Start Date:</string>
    <string name="routes_label">Routes:</string>
    <string name="not_provided">Not provided</string>
    <string name="alert">Alert</string>
    <string name="loading_alert_details">Loading alert details</string>
    <string name="error_loading_alert_details">Unable to find alert details, please check your connection. We\'ll keep trying to load the alert details.</string>

    <!--Cardinal Directions-->
    <string name="north">North</string>
    <string name="south">South</string>
    <string name="west">West</string>
    <string name="east">East</string>

    <string name="invalid_request">Invalid request</string>
    <string name="back_to_exit">Press back button again to exit</string>
    <string name="loading_schedule">Loading schedule</string>
    <string name="download_schedule">Download a schedule:</string>
    <string name="or_try_live_mode">Or check MDOT info:</string>
    <string name="schedule">MDOT Information</string>
    <string name="live_mode">MDOT Info</string>


</resources>
