<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/rounded_corners"
    android:elevation="@dimen/elevation_card"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <android.support.constraint.ConstraintLayout
        android:id="@+id/trainNumberBadge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:layout_marginStart="16dp"
        android:background="@drawable/rounded_corners_primary_dark"
        android:elevation="@dimen/elevation_card"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/trainIcon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_train_orange_50dp"
            android:tint="@color/colorAccent"
            app:layout_constraintBottom_toTopOf="@+id/trainNumber"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:contentDescription="@string/train_number" />

        <TextView
            android:id="@+id/trainNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/placeholder_train_num"
            android:textColor="@color/colorAccent"
            android:textSize="25sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/trainIcon" />

    </android.support.constraint.ConstraintLayout>

    <android.support.constraint.ConstraintLayout
        android:id="@+id/constraintLayout2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:background="@drawable/rounded_corners"
        android:backgroundTint="@android:color/white"
        android:elevation="@dimen/elevation_card"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/trainNumberBadge"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            style="@style/mt.traininfo.label"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    style="@style/mt.traininfo.label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/next_station" />

                <TextView
                    style="@style/mt.traininfo.label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/est_departure" />

                <TextView
                    style="@style/mt.traininfo.label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/status" />

                <TextView
                    style="@style/mt.traininfo.label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/delay" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textDataStationName"
                    style="@style/mt.traininfo.data"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/placeholder_station" />

                <TextView
                    android:id="@+id/textDataDepart"
                    style="@style/mt.traininfo.data"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/placeholder_time" />

                <TextView
                    android:id="@+id/textDataStatus"
                    style="@style/mt.traininfo.data"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/placeholder_status" />

                <TextView
                    android:id="@+id/textDataDelay"
                    style="@style/mt.traininfo.data"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/placeholder_delay" />
            </LinearLayout>
        </LinearLayout>


    </android.support.constraint.ConstraintLayout>

</android.support.constraint.ConstraintLayout>