<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (c) 2019 IdleOffice Inc.
  ~
  ~ recycler_status_train.xml is part of MarcTrainTracker.
  ~
  ~ MarcTrainTracker is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ MarcTrainTracker is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with this software.  If not, see <http://www.gnu.org/licenses/>.
  -->
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/trainStatusCard"
    style="@style/mt.card"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/trainNumberBadge"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:elevation="@dimen/elevation_card"
        app:layout_constraintBottom_toTopOf="@+id/trainStatusData"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/trainIcon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/train_number"
            android:src="@drawable/ic_train_colored_50dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/trainNumber"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/trainNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/placeholder_train_num"
            android:textColor="@android:color/black"
            android:textSize="25sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/trainIcon"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/trainStatusData"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@android:color/white"
        android:elevation="@dimen/elevation_card"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/trainNumberBadge">

        <LinearLayout
            android:id="@+id/trainInfoTextLayout"
            style="@style/mt.traininfo.label"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:id="@+id/textLabelLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textLabelNextStation"
                    style="@style/mt.traininfo.label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/next_station" />

                <TextView
                    android:id="@+id/textLabelDeparture"
                    style="@style/mt.traininfo.label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/est_departure" />

                <TextView
                    android:id="@+id/textLabelStatus"
                    style="@style/mt.traininfo.label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/status" />

                <TextView
                    android:id="@+id/textLabelDelay"
                    style="@style/mt.traininfo.label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/delay" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/textDataLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textDataStationName"
                    style="@style/mt.traininfo.data"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/placeholder_station" />

                <TextView
                    android:id="@+id/textDataDepart"
                    style="@style/mt.traininfo.data"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/placeholder_time" />

                <TextView
                    android:id="@+id/textDataStatus"
                    style="@style/mt.traininfo.data"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/placeholder_status" />

                <TextView
                    android:id="@+id/textDataDelay"
                    style="@style/mt.traininfo.data"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/placeholder_delay" />
            </LinearLayout>
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>