<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <include
            android:id="@+id/loading_layout"
            layout="@layout/progress_bar_frame_layout_partial"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:visibility="visible"
            tools:visibility="gone" />

        <androidx.constraintlayout.widget.ConstraintLayout xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            tools:visibility="visible">

            <TextView
                android:id="@+id/title"
                style="@style/text.h5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="MARC CAMDEN 123 - Delay" />

            <TextView
                android:id="@+id/labelRoutes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/routes_label"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/title" />

            <TextView
                android:id="@+id/routes"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/labelBarrier"
                app:layout_constraintTop_toBottomOf="@id/title"
                tools:text="PENN - WASHINGTON" />

            <androidx.constraintlayout.widget.Barrier
                android:id="@+id/routesBarrier"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:barrierDirection="bottom"
                app:constraint_referenced_ids="labelRoutes, routes" />


            <TextView
                android:id="@+id/labelDescription"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/description_label"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/routesBarrier" />

            <TextView
                android:id="@+id/description"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/labelBarrier"
                app:layout_constraintTop_toBottomOf="@id/routesBarrier"
                tools:text="Camden Line Train 859 (6:15 dpt Camden) is operating with a 15-20 minute delay due to heat related speed restrictions and CSX freight interference." />

            <androidx.constraintlayout.widget.Barrier
                android:id="@+id/descriptionBarrier"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:barrierDirection="bottom"
                app:constraint_referenced_ids="labelDescription, description" />

            <TextView
                android:id="@+id/labelStartDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/start_date_label"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/descriptionBarrier" />

            <TextView
                android:id="@+id/startDate"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/labelBarrier"
                app:layout_constraintTop_toBottomOf="@id/descriptionBarrier"
                tools:text="08/28/2020 7:18 PM" />

            <androidx.constraintlayout.widget.Barrier
                android:id="@+id/startDateBarrier"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:barrierDirection="bottom"
                app:constraint_referenced_ids="labelStartDate, startDate" />

            <TextView
                android:id="@+id/labelEndDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/end_date_label"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/startDateBarrier" />

            <TextView
                android:id="@+id/endDate"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/labelBarrier"
                app:layout_constraintTop_toBottomOf="@id/startDateBarrier"
                tools:text="08/28/2020 8:18 PM" />

            <androidx.constraintlayout.widget.Barrier
                android:id="@+id/endDateBarrier"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:barrierDirection="bottom"
                app:constraint_referenced_ids="labelEndDate, endDate" />

            <TextView
                android:id="@+id/labelCause"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cause_label"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/endDateBarrier" />

            <TextView
                android:id="@+id/cause"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/labelBarrier"
                app:layout_constraintTop_toBottomOf="@id/endDateBarrier"
                tools:text="Other Cause" />

            <androidx.constraintlayout.widget.Barrier
                android:id="@+id/causeBarrier"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:barrierDirection="bottom"
                app:constraint_referenced_ids="labelCause, cause" />

            <TextView
                android:id="@+id/labelEffect"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/effect_label"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/causeBarrier" />

            <TextView
                android:id="@+id/effect"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/labelBarrier"
                app:layout_constraintTop_toBottomOf="@id/causeBarrier"
                tools:text="Other Effect" />

            <androidx.constraintlayout.widget.Barrier
                android:id="@+id/labelBarrier"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:barrierDirection="end"
                app:constraint_referenced_ids="labelDescription" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </FrameLayout>
</ScrollView>
